--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
-  <head>
-    
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="refresh" content="0;url=https://discord.gg/GmvrpjhM2P">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected, <a href="https://discord.gg/GmvrpjhM2P">click here</a>.</p>
+</body>
 </html>
