--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="theme-color" content="#4285f4" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PortalGenesis Discord">
+    <meta property="og:url" content="https://discord.com/invite/GmvrpjhM2P">
     <meta http-equiv="refresh" content="0;url=https://discord.gg/GmvrpjhM2P">
     <title>Redirecting...</title>
 </head>
