--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="PortalGenesis Discord">
     <meta property="og:url" content="https://discord.com/invite/GmvrpjhM2P">
+    <meta property="og:image" content="https://portalgenesis.cc/logo_big.png">
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
     <meta http-equiv="refresh" content="0;url=https://discord.gg/GmvrpjhM2P">
     <title>Redirecting...</title>
 </head>
