--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="theme-color" content="#4285f4" />
+    <meta name="theme-color" content="#b691ff" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="PortalGenesis Discord">
     <meta property="og:url" content="https://discord.com/invite/GmvrpjhM2P">
