--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="theme-color" content="#c9adff" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="PortalGenesis Discord">
-    <meta property="og:url" content="https://discord.com/invite/GmvrpjhM2P">
+    <meta property="og:description" content="RiftRealms Minecraft server Discord">
+<!--     <meta property="og:url" content="https://discord.com/invite/GmvrpjhM2P"> -->
     <meta property="og:image" content="https://portalgenesis.cc/logo_512.png">
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
